--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,7 +1,16 @@
+<form action="/add_bookmark" method="post">
+  <input type="text" name="bookmark">
+  <input type="text" name="title">
+ <input type="submit" value="Submit Bookmark">
+</form>
 <%if @bookmarks %>
   <ul>
     <% @bookmarks.each do |bookmark| %>
-      <li><%= bookmark %></li>
+      <li> 
+       <a href = "<%= bookmark.url %>"> 
+         <%= bookmark.title%>
+       </a>
+      </li>
     <% end %>
   </ul>
 <% end %>
