--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,8 +1,4 @@
-<form action="/add_bookmark" method="post">
-  <input type="text" name="bookmark">
-  <input type="text" name="title">
- <input type="submit" value="Submit Bookmark">
-</form>
+<h1>Bookmarks page:</h1>
 <%if @bookmarks %>
   <ul>
     <% @bookmarks.each do |bookmark| %>
@@ -14,3 +10,6 @@
     <% end %>
   </ul>
 <% end %>
+<form action="/newbookmark_page" method="get">
+  <input type="submit" value="Add New Bookmark">
+</form>
