Task 4 complete - Edit bookmark

--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -6,10 +6,15 @@
         <a href = "<%= bookmark.url %>" target="_blank"> 
           <%= bookmark.title%>
         </a>
-        <form action="/bookmarks/<%= bookmark.id %>" method="post">
-          <input type='hidden' name='_method' value="DELETE"/>
-          <input type="submit" value="Delete"/>
-        </form>
+        <div>
+          <form style="display: inline;" action="/bookmarks/<%= bookmark.id %>" method="post">
+            <input type='hidden' name='_method' value="DELETE"/>
+            <input type="submit" value="Delete"/>
+          </form>
+          <form style="display: inline;" action="/bookmarks/<%= bookmark.id %>/edit" method="get">
+            <input type='submit' value='Edit'>
+          </form>
+        </div>
       </li>
     <% end %>
   </ul>
